--- a/index.html
+++ b/index.html
@@ -11,11 +11,6 @@
 	    background-color: #f1f1f1;
 	    display: block;
 	}
-	#myCanvas{
-		/* width: 80%;
-		height: 80%; */
-	}
-	canvas { display:block; }
 </style>
 </head>
 <body>
@@ -25,16 +20,70 @@
 	<script>
 	var c = document.getElementById("myCanvas");
 	var ctx = c.getContext("2d");
-	ctx.beginPath()
-	// draw();
-	function draw() {
-		ctx.arc(95,50,10,0,2*Math.PI);
+	var color = "black";
+	var penDown = true;
+	let x = 0;
+	let y = 0;
+
+	var rect = c.getBoundingClientRect();
+
+
+	resize();
+	colorPicker();
+
+	function resize(){
+		var c = document.getElementById("myCanvas");
+		c.width = window.innerWidth *.8;
+		c.height = window.innerHeight * .8;
+	}
+
+	function draw(posX, posY) {
+		if(!penDown) return;
+		colorPicker();
+		ctx.fillStyle = color;
+		ctx.beginPath();
+		ctx.arc(posX,posY,10,0,2*Math.PI);
 		ctx.fill();
+
 	}
 	myCanvas.addEventListener('mousemove', function (e){
-		console.log(e);
-		draw();
+		x = e.clientX - rect.left;
+  	y = e.clientY - rect.top;
+		console.log(e.x);
+		console.log(e.y);
+		draw(e.x, e.y);
 	})
+
+	window.addEventListener('keydown', function (e){
+		console.log(e);
+
+		if (e.keyCode == 71){
+			color = "green";
+		}
+		else if (e.keyCode == 66) {
+			color = "blue";
+		}
+		else if (e.keyCode == 82) {
+			color = "red";
+		}
+		else if (e.keyCode == 89) {
+			color = "yellow";
+		}
+		else if (e.keyCode == 32){
+			ctx.clearRect(0, 0, myCanvas.width, myCanvas.height);
+		}
+		else if (e.keyCode == 38) {
+			penDown = false;
+		}
+		else if(e.keyCode == 40){
+			penDown = true;
+		}
+	})
+
+	function colorPicker(){
+		color = document.getElementById("picker").value;
+
+	}
 
 	</script>
 </body>
