--- a/index.html
+++ b/index.html
@@ -20,42 +20,52 @@
 	<script>
 	var c = document.getElementById("myCanvas");
 	var ctx = c.getContext("2d");
-	var color = "black";
-	var penDown = true;
+	var color = "red";
+	var penDown = 1;
 	let x = 0;
 	let y = 0;
 
-	var rect = c.getBoundingClientRect();
+	const rect = c.getBoundingClientRect();
 
 
 	resize();
-	colorPicker();
 
 	function resize(){
-		var c = document.getElementById("myCanvas");
+		// var c = document.getElementById("myCanvas");
 		c.width = window.innerWidth *.8;
 		c.height = window.innerHeight * .8;
 	}
 
 	function draw(posX, posY) {
-		if(!penDown) return;
-		colorPicker();
 		ctx.fillStyle = color;
 		ctx.beginPath();
 		ctx.arc(posX,posY,10,0,2*Math.PI);
 		ctx.fill();
 
 	}
-	myCanvas.addEventListener('mousemove', function (e){
+
+
+	c.addEventListener('mousemove', function (e){
 		x = e.clientX - rect.left;
-  	y = e.clientY - rect.top;
+    y = e.clientY - rect.top;
+		console.log(e);
 		console.log(e.x);
 		console.log(e.y);
-		draw(e.x, e.y);
+		if (penDown == 1) {
+			draw(x,y);
+		}
 	})
+
+	picker.addEventListener("change", function(){
+		color = document.getElementById("picker").value;
+		console.log(color);
+	})
+
 
 	window.addEventListener('keydown', function (e){
 		console.log(e);
+		x = e.clientX - rect.left;
+    y = e.clientY - rect.top;
 
 		if (e.keyCode == 71){
 			color = "green";
@@ -80,10 +90,7 @@
 		}
 	})
 
-	function colorPicker(){
-		color = document.getElementById("picker").value;
 
-	}
 
 	</script>
 </body>
