--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	function draw(posX, posY) {
 		ctx.fillStyle = color;
 		ctx.beginPath();
-		ctx.arc(posX,posY,10,0,2*Math.PI);
+		ctx.arc(posX-10,posY-10,10,0,2*Math.PI);
 		ctx.fill();
 
 	}
